# PSPS-Probability-Shadow-Pathfinding-System

./: README.md  pyproject.toml
data/: simulation_metrics.csv  simulation_metrics.json  simulation_summary.json
data/analytics/: 20241107_062034_20241107_063953_metrics.csv  20241107_062034_20241107_063953_metrics.json
examples/: basic_simulation.py
src/: cli.py
src/analytics/: metrics_analyzer.py  plot_generator.py
src/core/: drone.py  intention.py  metrics.py  shadow.py
src/simulation/: grid.py  visualizer.py
src/visualization/: animator.py  metrics_plotter.py
