[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "probability-shadow-pathfinding"
version = "0.1.0"
authors = [
  { name = "Michael La Rosa", email = "hello@mlarosa.dev" },
]
description = "A simulation framework for probability shadow-based drone pathfinding"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.21.0",
    "matplotlib>=3.4.0",
    "scipy>=1.7.0",
    "pandas>=1.3.0",
    "rich>=10.0.0",
    "click>=8.0.0"
]


[project.scripts]
psps = "psps.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/psps"]